--- a/JSbase02/jQuery.html
+++ b/JSbase02/jQuery.html
@@ -23,24 +23,24 @@
       // $("#id").prepend(elem);
       // $("#id").empty();
 
-      // $("#ex").show(4000);
-      // var elem='<p>かきくけこ</p>';
-      // $("#ex").html(elem);
-      // $("#ex").css("background-color","black")
-      // $("#ex").css("color","white");
-      // var elem2='<p>あいうえお</p>';
-      // $("#ex").prepend(elem2);
-      // var elem3='<p>さしすせそ</p>';
-      // $("#ex").append(elem3);
-      // $("#ex p:odd").css("background-color","white");
+      $("#ex").show(4000);
+      var elem='<p>かきくけこ</p>';
+      $("#ex").html(elem);
+      $("#ex").css("background-color","black")
+      $("#ex").css("color","white");
+      var elem2='<p>あいうえお</p>';
+      $("#ex").prepend(elem2);
+      var elem3='<p>さしすせそ</p>';
+      $("#ex").append(elem3);
+      $("#ex p:odd").css("background-color","white");
 
-$("#btn1").on("click",function(){
-  alert("click");
-});
-
-$("#btn2").on("dblclick",function(){
-  alert("duble click");
-});
+// $("#btn1").on("click",function(){
+//   alert("click");
+// });
+//
+// $("#btn2").on("dblclick",function(){
+//   alert("duble click");
+// });
 
     });
   </script>
@@ -49,16 +49,16 @@ $("#btn2").on("dblclick",function(){
 
   <!-- <button id="email">email</button>
   <div id="jq">aiueo</div>
-  <div class="jc">12345</div>
+  <div class="jc">12345</div> -->
 
-  <div id="id">あいうえお</div>
-  <div id="txt">かきくけこ</div>
-  <div id="v">view</div> -->
+  <!-- <div id="id">あいうえお</div>
+  <div id="txt">かきくけこ</div> -->
+  <div id="v">view</div>
 
-<!-- <div id="ex">ex</div> -->
+  <div id="ex">ex</div>
 
-<button id="btn1">click</button>
-<button id="btn2">duble click</button>
+  <button id="btn1">click</button>
+  <button id="btn2">duble click</button>
 
 </body>
 </html>
