--- a/JS_kadai_15/index.html
+++ b/JS_kadai_15/index.html
@@ -28,35 +28,40 @@
       </div>
       <div id="button-box">
         <p>
+          <button type="button" class="btn btn-primary" id="fact" value="fact">X!</button>
           <button type="button" class="btn btn-primary">(</button>
           <button type="button" class="btn btn-primary">)</button>
           <button type="button" class="btn btn-primary">%</button>
-          <button type="button" class="btn btn-primary" id="ac">AC</button>
+          <button type="button" class="btn btn-primary" id="ac" value="ac">AC</button>
         </p>
 
         <p>
+          <button type="button" class="btn btn-primary">sin</button>
           <button type="button" class="btn btn-primary" id="seven" value="7">7</button>
           <button type="button" class="btn btn-primary" id="eight" value="8">8</button>
           <button type="button" class="btn btn-primary" id="nine" value="9">9</button>
-          <button type="button" class="btn btn-primary" id="div">÷</button>
+          <button type="button" class="btn btn-primary" id="div" value="div">÷</button>
         </p>
         <p>
+          <button type="button" class="btn btn-primary" id="log" value="log">log</button>
           <button type="button" class="btn btn-primary" id="four" value="4">4</button>
           <button type="button" class="btn btn-primary" id="five" value="5">5</button>
           <button type="button" class="btn btn-primary" id="six" value="6">6</button>
-          <button type="button" class="btn btn-primary" id="mult">×</button>
+          <button type="button" class="btn btn-primary" id="mult" value="mult">×</button>
         </p>
         <p>
+          <button type="button" class="btn btn-primary" id="root" value="root">√</button>
           <button type="button" class="btn btn-primary" id="one" value="1">1</button>
           <button type="button" class="btn btn-primary" id="two" value="2">2</button>
           <button type="button" class="btn btn-primary" id="three" value="3">3</button>
-          <button type="button" class="btn btn-primary" id="minus">-</button>
+          <button type="button" class="btn btn-primary" id="minus" value="minus">-</button>
         </p>
         <p>
-          <button type="button" class="btn btn-primary" id="zero">0</button>
-          <button type="button" class="btn btn-primary">.</button>
-          <button type="button" class="btn btn-primary">=</button>
-          <button type="button" class="btn btn-primary" id="plus">+</button>
+          <button type="button" class="btn btn-primary">EXP</button>
+          <button type="button" class="btn btn-primary" id="zero" value="0">0</button>
+          <button type="button" class="btn btn-primary" id="dot" value="dot">.</button>
+          <button type="button" class="btn btn-primary" id="equal" value="equal">=</button>
+          <button type="button" class="btn btn-primary" id="plus" value="plus">+</button>
         </p>
       </div>
     </div>
